--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,13 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.953.0",
+    "@aws-sdk/s3-request-presigner": "^3.953.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.16.0",
     "openai": "^4.83.0",
     "sharp": "^0.33.5",
     "ws": "^8.18.3"
