--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">=20 <24"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node --enable-source-maps dist/server.js",
-    "postinstall": "npm run build",
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
@@ -21,8 +20,10 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.16.0",
     "openai": "^4.83.0",
-    "sharp": "^0.33.5",
     "ws": "^8.18.3"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
