Auto-create missing MySQL tables on startup

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,6 +15,9 @@
 # Set to 1 to auto-create tables on startup (dev only)
 # DB_AUTO_MIGRATE=1
 #
+# Default is enabled. Set to 0 to disable auto ensure.
+# DB_ENSURE_SCHEMA=0
+#
 ## S3 (private bucket; server generates presigned URLs)
 # AWS_REGION=us-east-1
 # S3_BUCKET=nexus-prod-media
