--- a/nexus/package.json
+++ b/nexus/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.29",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-media-library": "^18.2.1",
     "expo-status-bar": "~3.0.9",
