Choose exactly one category per screenshot

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,10 @@
 ## Temporary auth (client sends `x-nexus-user-id`)
 # No config needed
 #
+## Categorization
+# Force exactly 1 category per indexed screenshot (default is 1)
+# MAX_CATEGORIES_PER_DOC=1
+#
 ## RDS (MySQL)
 # DB_HOST=tdp-db.cxstpaskcliu.us-east-1.rds.amazonaws.com
 # DB_PORT=3306
