--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -10,7 +10,6 @@ on:
 
 permissions:
   contents: read
-  id-token: write
 
 concurrency:
   group: "deploy-server-main"
@@ -54,7 +53,8 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy to Elastic Beanstalk
@@ -79,4 +79,3 @@ jobs:
 
           aws elasticbeanstalk wait environment-updated --environment-name "${EB_ENVIRONMENT_NAME}"
           aws elasticbeanstalk wait environment-ready --environment-name "${EB_ENVIRONMENT_NAME}"
-
