Add chat model picker

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,10 @@
 # PORT=4000
 # OPENAI_API_KEY=sk-...
 #
+## Chat model selection (optional)
+# CHAT_MODEL=gpt-5.2
+# CHAT_MODELS=gpt-5.2,gpt-4.1,gpt-4o-mini
+#
 ## Temporary auth (client sends `x-nexus-user-id`)
 # No config needed
 #
