--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,9 @@
 # CHAT_MODEL=gpt-5.2
 # CHAT_MODELS=gpt-5.2,gpt-4.1,gpt-4o-mini
 #
+## Paywall enforcement (optional, set to 0 to disable limits)
+# PAYWALL_ENFORCED=1
+#
 ## Temporary auth (client sends `x-nexus-user-id`)
 # No config needed
 #
