--- a/nexus/app.json
+++ b/nexus/app.json
@@ -14,6 +14,7 @@
     },
     "ios": {
       "supportsTablet": false,
+      "usesAppleSignIn": true,
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "We need access to your photo library to import screenshots for AI categorization."
       }
