--- a/server/.env.example
+++ b/server/.env.example
@@ -9,6 +9,9 @@
 ## Paywall enforcement (optional, set to 0 to disable limits)
 # PAYWALL_ENFORCED=1
 #
+## Apple Sign In
+# APPLE_AUDIENCE=com.your.bundleid
+#
 ## Temporary auth (client sends `x-nexus-user-id`)
 # No config needed
 #
