--- a/nexus/package.json
+++ b/nexus/package.json
@@ -17,16 +17,17 @@
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.29",
+    "expo-apple-authentication": "~7.0.1",
+    "expo-document-picker": "~14.0.4",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-media-library": "^18.2.1",
-    "expo-apple-authentication": "~7.0.1",
-    "expo-document-picker": "~14.0.4",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-iap": "^12.16.4",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-svg": "15.12.1"
