--- a/server/.env.example
+++ b/server/.env.example
@@ -12,6 +12,13 @@
 ## Apple Sign In
 # APPLE_AUDIENCE=com.your.bundleid
 #
+## App Store IAP (subscriptions)
+# APPLE_IAP_SHARED_SECRET=
+# APPLE_IAP_BUNDLE_ID=com.your.bundleid
+# IAP_PRODUCT_STARTER=com.your.bundleid.starter
+# IAP_PRODUCT_PRO=com.your.bundleid.pro
+# IAP_PRODUCT_MAX=com.your.bundleid.max
+#
 ## Temporary auth (client sends `x-nexus-user-id`)
 # No config needed
 #
