--- a/nexus/app.json
+++ b/nexus/app.json
@@ -15,6 +15,7 @@
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.ragobble.Nexus",
+      "buildNumber": "2",
       "usesAppleSignIn": true,
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "We need access to your photo library to import screenshots for AI categorization.",
