Update IAP ids and build metadata

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,9 +15,9 @@
 ## App Store IAP (subscriptions)
 # APPLE_IAP_SHARED_SECRET=
 # APPLE_IAP_BUNDLE_ID=com.your.bundleid
-# IAP_PRODUCT_STARTER=com.your.bundleid.starter
-# IAP_PRODUCT_PRO=com.your.bundleid.pro
-# IAP_PRODUCT_MAX=com.your.bundleid.max
+# IAP_PRODUCT_STARTER=com.ragobble.Nexus.lite_tier
+# IAP_PRODUCT_PRO=com.ragobble.Nexus.pro_tier
+# IAP_PRODUCT_MAX=com.ragobble.Nexus.max_tier
 #
 ## Temporary auth (client sends `x-nexus-user-id`)
 # No config needed
