--- a/nexus/eas.json
+++ b/nexus/eas.json
@@ -10,9 +10,9 @@
         "EXPO_PUBLIC_ENABLE_AUTH": "1",
         "EXPO_PUBLIC_REQUIRE_AUTH": "1",
         "EXPO_PUBLIC_AUTH_DEBUG": "0",
-        "EXPO_PUBLIC_IAP_STARTER_PRODUCT_ID": "com.ragobble.Nexus.starter",
-        "EXPO_PUBLIC_IAP_PRO_PRODUCT_ID": "com.ragobble.Nexus.pro",
-        "EXPO_PUBLIC_IAP_MAX_PRODUCT_ID": "com.ragobble.Nexus.max"
+        "EXPO_PUBLIC_IAP_STARTER_PRODUCT_ID": "com.ragobble.Nexus.lite_tier",
+        "EXPO_PUBLIC_IAP_PRO_PRODUCT_ID": "com.ragobble.Nexus.pro_tier",
+        "EXPO_PUBLIC_IAP_MAX_PRODUCT_ID": "com.ragobble.Nexus.max_tier"
       }
     }
   }
