--- a/nexus/package.json
+++ b/nexus/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
+    "expo-image-manipulator": "~14.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-media-library": "^18.2.1",
     "expo-status-bar": "~3.0.9",
