--- a/nexus/package.json
+++ b/nexus/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.30",
     "expo-apple-authentication": "~8.0.8",
+    "expo-auth-session": "^6.2.1",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -25,6 +26,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-media-library": "^18.2.1",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~14.2.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-iap": "^12.16.4",
