--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.16.0",
     "openai": "^4.83.0",
+    "pdf-parse": "^1.1.1",
     "jose": "^5.9.6",
     "ws": "^8.18.3"
   },
